<resources>
    <string name="app_name">App2</string>
    <string name="lista_de_productos">Lista de productos</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="ingresar">ingresar</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="registrar_nuevo_producto">Registrar nuevo producto</string>
    <string name="guardar">Guardar</string>
    <string name="Productos" />
    <string name="productos">Productos</string>
    <string name="lugares_de_interes">Lugares de Interes</string>
    <string name="title_activity_settings_preferencias">SettingsActivityPreferencias</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="salir">Salir</string>
    <string name="preferencias">Preferencias</string>
    <string name="seleccione_una_opci_n_del_men">Seleccione una opción del menú</string>
    <string name="agregar">Agregar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="productosTitulo">Productos</string>
    <string name="editar_producto">Editar Producto</string>
    <string name="guardarEdicion">Guardar</string>
    <string name="cantidad">Cantidad:</string>
    <string name="precio">Precio:</string>
    <string name="lugar_de_compra">Lugar de Compra:</string>
    <string name="NombreProducto">Nombre Producto:</string>
</resources>