<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAE0E0"
    tools:context=".Inicio">

    <Button
        android:id="@+id/button8"
        android:layout_width="311dp"
        android:layout_height="57dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="119dp"
        android:backgroundTint="#00F3F3F3"
        android:fontFamily="casual"
        android:scrollbarSize="14dp"
        android:text="@string/salir"
        android:textColor="#0B0A0A"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="478dp"
        android:background="@color/light_blue"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="408dp"
            android:layout_height="match_parent"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="Menú"
            android:textAlignment="center"
            android:textColor="#0C0C0C"
            android:textDirection="locale"
            android:textSize="34sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#00F3F3F3"
        android:fontFamily="casual"
        android:scrollbarSize="14dp"
        android:text="@string/productos"
        android:textColor="#0B0A0A"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#00F3F3F3"
        android:fontFamily="casual"
        android:scrollbarSize="14dp"
        android:text="@string/lugares_de_interes"
        android:textColor="#0B0A0A"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#00F3F3F3"
        android:fontFamily="casual"
        android:scrollbarSize="14dp"
        android:text="@string/preferencias"
        android:textColor="#0B0A0A"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="252dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/seleccione_una_opci_n_del_men"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>